--- a/SITE/app/templates/base.html.j2
+++ b/SITE/app/templates/base.html.j2
@@ -86,7 +86,7 @@
       <ul class="nav navbar-nav navbar-right">
         {% block nav_bar_options %}
           <li><a href="/enviacod">Enviar Codigo</a></li>
-          <li><a href="">Verificar retorno</a></li>
+          <li><a href="/verificacao">Verificar retorno</a></li>
         {% endblock %}
       </ul>
     </div>
